crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_set_multiple_properties.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Alice'}) SET n.age = 31, n.active = true RETURN n\")"
---
MATCH (n:Person {name: 'Alice'})
SET n.age = 31, n.active = TRUE
RETURN n
