crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_set_property.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Alice'}) SET n.age = 31 RETURN n\")"
---
MATCH (n:Person {name: 'Alice'})
SET n.age = 31
RETURN n
