crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_with_aggregation.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person)-[r:KNOWS]->(m) WITH n, count(m) AS friendCount RETURN n.name, friendCount ORDER BY friendCount DESC\")"
---
MATCH (n:Person)-[r:KNOWS]->(m)
WITH n, COUNT(m) AS friendCount
RETURN n.name, friendCount
ORDER BY friendCount DESC
