crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_with_multiple_projections.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person)-[r:KNOWS]->(m:Person) WITH n.name AS name, m.name AS friend, r.since AS year RETURN name, friend, year\")"
---
MATCH (n:Person)-[r:KNOWS]->(m:Person)
WITH n.name AS name, m.name AS friend, r.since AS year
RETURN name, friend, year
